[package]
name = "ephyr-restreamer"
version = "0.2.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false
default-run = "ephyr-restreamer"

[dependencies]
actix-service = "1.0"
actix-web = "3.3"
actix-web-httpauth = "0.5"
actix-web-static-files = "3.0"
anyhow = "1.0"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
askama = { version = "0.10", default-features = false }
backoff = { version = "0.3", features = ["tokio"] }
byteorder = "1.4"
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
futures-signals = "0.3"
hex = "0.4"
humantime = "2.1"
juniper = "0.15"
juniper_actix = { version = "0.2", features = ["subscriptions"] }
juniper_graphql_ws = "0.2"
once_cell = { version = "1.7", features = ["parking_lot"] }
public-ip = "0.2"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
send_wrapper = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_humantime = { version = "1.0", package = "humantime-serde" }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
tokio-stream = "0.1"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
[dependencies.derive_more]
    version = "0.99.11"
    features = ["as_ref", "deref", "display", "error", "from"]
    default-features = false
[dependencies.tokio]
    version = "1"
    features = ["fs", "io-util", "process", "rt", "sync", "time"]
[dependencies.tsclientlib]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "d85e08d6e4d088c9d19b9958578aaf7df9cbcbac" # branch = "master"
[dependencies.tsproto-packets]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "d85e08d6e4d088c9d19b9958578aaf7df9cbcbac" # branch = "master"
[dependencies.zeromq]
    git = "https://github.com/zeromq/zmq.rs"
    rev = "ad9ee2c3d46e6b90c91827dcb7760b7a28071b97" # tokio = "1.0"

[build-dependencies]
anyhow = "1.0"
actix-web-static-files = "3.0"
