[package]
name = "ephyr-restreamer"
version = "0.3.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false
default-run = "ephyr-restreamer"

[dependencies]
actix-service = "2.0"
actix-web = "4.0.0-beta.6"
#actix-web-httpauth = "0.6.0-beta.1" use working fork
# https://github.com/actix/actix-extras/issues/176#issuecomment-830658605
actix-web-static-files = "3.0"
anyhow = "1.0"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
askama = { version = "0.10", default-features = false }
backoff = { version = "0.3", features = ["tokio"] }
byteorder = "1.4"
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
futures-signals = "0.3"
hex = "0.4"
humantime = "2.1"
juniper = "0.15"
juniper_actix = { version = "0.2", features = ["subscriptions"] }
juniper_graphql_ws = "0.2"
once_cell = { version = "1.7", features = ["parking_lot"] }
public-ip = "0.2"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
send_wrapper = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_humantime = { version = "1.0", package = "humantime-serde" }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
tokio-stream = { version="0.1", features = ["fs"]}
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
[dependencies.derive_more]
    version = "0.99.11"
    features = ["as_ref", "deref", "display", "error", "from"]
    default-features = false
[dependencies.tokio]
    version = "1"
    features = ["fs", "io-util", "process", "rt", "sync", "time"]
[dependencies.tsclientlib]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "c7fa1c070b8ea0d56530ffba530b86df9b3a377a" # ver = "0.2.0"
[dependencies.tsproto-packets]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "c7fa1c070b8ea0d56530ffba530b86df9b3a377a" # ver = "0.2.0"
[dependencies.zeromq]
    git = "https://github.com/zeromq/zmq.rs"
    rev = "ad9ee2c3d46e6b90c91827dcb7760b7a28071b97" # tokio = "1.0"
[dependencies.actix-web-httpauth]
    git = "https://github.com/near/actix-extras"
    rev = "cdae476d490b4e79f73cf7ea583237272bcc2e1c"

[build-dependencies]
anyhow = "1.0"
actix-web-static-files = "3.0"
